# Algorithm

./: CMakeLists.txt  README.md
src/: main.c
src/algorithms/searching/: search.c  search.h
src/algorithms/sorting/: sorting.h
src/codeMonk/: codeMonk.c  codeMonk.h
src/hacker/: problems.c  problems.h
src/mylib/: mylib.c
src/mylib/datastructure/: ds.c  ds.h
src/sorting/: sorting.c
src/sorting/mylib/: mylib.h
